examples/paperless/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  annotations:

    # This secret is automatically built from an item with the same name in 1Password.
    # If the SMTP credentials change, we'll auto redeploy the app so it can continue
    # to send email messages. This is done by the 1Password Kubernetes Operator.

    operator.1password.io/item-path: "vaults/Kubernetes/items/your-smtp-secret-name"
    operator.1password.io/item-name: "your-smtp-secret-name"
    operator.1password.io/auto-restart: "true"
spec:
  template:
    spec:
      containers:
        - name: webserver
