examples/paperless/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver
spec:
  tls:
    - hosts:
        - paperless.zbmowrey.com
      secretName: domain-zbm001-cert
  rules:
    - host: paperless.zbmowrey.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver
                port:
                  number: 8000
